Canviat el fons de la pàgina en el arxiu CSS

--- a/Exercici09.css
+++ b/Exercici09.css
@@ -3,7 +3,7 @@
 */
 
 body{
-    background-image: url(backgrounds/fons.png);
+    background-image: url(https://images.twinkl.co.uk/tr/image/upload/illustation/Birthday-Cake-.png);
     font-family: Arial, Helvetica, sans-serif;
     line-height: 130%;
     color: #615041;
